# apispec.json
@@ -180,6 +180,92 @@
                 }
             }
         },
+        "/api/profile": {
+            "get": {
+                "summary": "Retrieve existing user",
+                "description": "Retrieve existing user",
+                "parameters": [
+                    {
+                        "name": "userId",
+                        "in": "path",
+                        "required": true,
+                        "description": "User id for update",
+                        "schema": {
+                            "type": "integer",
+                            "nullable": false,
+                            "minLength": 1
+                        },
+                        "examples": {
+                            "example_1": {
+                                "description": "User id = 1",
+                                "value": 1
+                            },
+                            "example_2": {
+                                "description": "User id = 2",
+                                "value": 2
+                            }
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success retrieve user",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "properties": {
+                                        "status": {
+                                            "type":"string"
+                                        },
+                                        "message": {
+                                            "type":"string"
+                                        },
+                                        "body": {
+                                            "type": "object",
+                                            "properties": {
+                                                "id": {
+                                                    "type": "integer"
+                                                },
+                                                "username": {
+                                                    "type": "string"
+                                                },
+                                                "password": {
+                                                    "type": "string"
+                                                },
+                                                "created_at": {
+                                                    "type": "string"
+                                                },
+                                                "updated_at": {
+                                                    "type": "string"
+                                                }
+                                            }
+                                        }
+                                    }
+                                },
+                                "examples": {
+                                    "success": {
+                                        "description": "Example success retrieve user details",
+                                        "value":{
+                                            "status": "200 - STATUS OK",
+                                            "message": "Success retrieve user",
+                                            "body": {
+                                                "id": 1,
+                                                "username": "Belajar",
+                                                "password": "Golang RESTful API",
+                                                "created_at": "2023-03-03T16:10:18+07:00",
+                                                "ipdated_at": "2023-03-03T16:10:18+07:00"
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                            
+                        }
+                    }
+                }
+            }
+        },
         "/user/{userId}": {
             "get": {
                 "summary": "Retrieve existing user",
